load from array

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
+  width: 10vmin;
   pointer-events: none;
 }
 
@@ -14,13 +15,12 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #886644;  
+  min-height: 16vh;  
+  display: flex;  flex-direction: column;  
+  align-items: center;  
+  justify-content: center;  
+  font-size: calc(10px + 2vmin);  
   color: white;
 }
 
@@ -29,10 +29,19 @@
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  from {    transform: rotate(0deg);  }
+  to {    transform: rotate(360deg);  }
 }
+
+
+.paper   { background-color:#886644; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode'  }
+.menu    { display:table; font-size:1em; }
+
+.course  { display:table-row; font-family:inherit; }
+.caption { display:table-row; height:60px; font-family:inherit;  }
+.title   { display:table-row; font-size:2em; width:600px; text-align:center; font-family:inherit; }
+
+.choice  { display:table-cell; float:left; width:150px;  font-weight:bold; font-family:inherit; font-size:0.8em;}
+.spacer  { display:table-cell; float:left; width:15px; }
+
+
