--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-body {
+html, body {
   margin: 0;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -8,3 +9,7 @@ body {
 }
 
 code {  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace; }
+
+#root {
+  height: 100%
+}
